Alignment fixes.

--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -1612,28 +1612,32 @@ p.has-background {
 @media (min-width: 480px) {
 	.alignleft {
 		float: left;
-		margin: 0 1.5em 1.5em 0;
+		margin: 0 1.5em 0.25em 0;
+	}
+	.alignleft:not(.is-resized) {
 		max-width: 50%;
 	}
 }
 
 .alignleft.is-small {
 	float: left;
-	margin: 0 1.5em 1.5em 0;
+	margin: 0 1.5em 0.25em 0;
 	max-width: 50%;
 }
 
 @media (min-width: 480px) {
 	.alignright {
 		float: right;
-		margin: 0 0 1.5em 1.5em;
+		margin: 0 0 0.25em 1.5em;
+	}
+	.alignright:not(.is-resized) {
 		max-width: 50%;
 	}
 }
 
 .alignright.is-small {
 	float: right;
-	margin: 0 0 1.5em 1.5em;
+	margin: 0 0 0.25em 1.5em;
 	max-width: 50%;
 }
 
